--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,7 @@
     <artifactId>bankPlugin</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 </project>
